Update upload file for chat message